syntax = "proto3";

package worker.v1;

option go_package = "github.com/superblocksteam/agent/types/gen/go/worker/v1";

// Service for executing code in Python/JavaScript workers
service SandboxExecutorTransportService {
  rpc Execute(ExecuteRequest) returns (ExecuteResponse);
}

// Execute request sent to workers
message ExecuteRequest {
  // The code to execute
  string script = 1;
  // JSON-encoded context variables (accessible as globals in the script)
  string context_json = 2;
  // Timeout in milliseconds
  int32 timeout_ms = 3;
  // Execution ID for correlation
  string execution_id = 4;
  // Address of the variable store (orchestrator) for callbacks
  string variable_store_address = 5;
  // Variable specifications (JSON)
  string variables_json = 6;
}

message ExecuteResponse {
  // JSON-encoded result from the script
  string result = 1;
  // Standard output lines
  repeated string stdout = 2;
  // Standard error lines
  repeated string stderr = 3;
  // Exit code (0 = success)
  int32 exit_code = 4;
  // Error message if execution failed
  string error = 5;
}
